--- a/index.html
+++ b/index.html
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Северяночка</title>
-    <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header></header>
-    <main></main>
+    <main>
+      <section class="container">
+        <h2>Специальные Предложения</h2>
+        <div class="offers__cards">
+          <div class="offers__card offers__card_firts">
+            <div class="card__text">
+              <h3>Оформите карту «Северяночка»</h3>
+              <p>И получайте бонусы при покупке в магазинах и на сайте</p>
+            </div>
+            <img
+              class="offers__forest"
+              src="./src/image/severyanochka-forest.jpg"
+              alt="Рисунок Магазина Северяночка На Фоне Леса"
+            />
+          </div>
+          <div class="offers__card offers__card_second">
+            <div class="card__text">
+              <h3>Покупайте акционные товары</h3>
+              <p>И получайте вдвое больше бонусов</p>
+            </div>
+            <img
+              class="offers__banner"
+              src="./src/image/banner-bucket.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+      <!-- <section class="container map">
+        <h2>Наши Магазины</h2>
+        <div class="adress__input">
+          <input class="styled__colored" type="button" value="п.Щельяюр" />
+          <input class="styled" type="button" value="д.Вертеп" />
+          <input class="styled" type="button" value="с.Краснобор" />
+          <input class="styled" type="button" value="д.Диюр" />
+        </div>
+        <div class="adress__map">
+          <script
+            type="text/javascript"
+            charset="utf-8"
+            async
+            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2b6a4f0347b7d4dac36b4c8fd5638f064d7c9010f40c27205c67ca472718ade3&amp;width=1208&amp;height=354&amp;lang=en_FR&amp;scroll=true"
+          ></script>
+        </div>
+      </section> -->
+    </main>
     <footer></footer>
-</body>
+  </body>
 </html>
