--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         />
         <h1 class="main__main-text">Доставка бесплатно от 1000</h1>
       </div>
-  <section class="container">
+      <section class="container">
         <h2>Специальные Предложения</h2>
         <div class="offers__cards">
           <div class="offers__card offers__card_firts">
@@ -179,7 +179,7 @@
           </div>
         </div>
       </section>
-       <section class="container map">
+      <section class="container map">
         <h2>Наши Магазины</h2>
         <div class="adress__input">
           <input class="styled__colored" type="button" value="п.Щельяюр" />
@@ -195,8 +195,8 @@
             src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2b6a4f0347b7d4dac36b4c8fd5638f064d7c9010f40c27205c67ca472718ade3&amp;width=1208&amp;height=354&amp;lang=en_FR&amp;scroll=true"
           ></script>
         </div>
-      </section> 
-<section class="artical">
+      </section>
+      <section class="artical">
         <div class="container">
           <div class="artical__menu">
             <p class="artical__title">Статьи</p>
@@ -219,14 +219,16 @@
               <h4 class="articals__title">
                 Режим использования масок и перчаток на территории магазинов
               </h4>
-              <p class="articals__description">
-                Подробная информация о режимах использования масок и перчаток на
-                территории магазинов "ЛЕНТА". Информация обновляется каждый
-                будний день.
-              </p>
-              <a href="#"
-                ><button class="articals__button">Подробнее</button></a
-              >
+              <div class="articals__desbut">
+                <p class="articals__description">
+                  Подробная информация о режимах использования масок и перчаток
+                  на территории магазинов "ЛЕНТА". Информация обновляется каждый
+                  будний день.
+                </p>
+                <a href="#"
+                  ><button class="articals__button">Подробнее</button></a
+                >
+              </div>
             </div>
 
             <!-- sun -->
@@ -238,13 +240,18 @@
               />
               <p class="articals__page">05.03.2021</p>
               <h4 class="articals__title">Весеннее настроение для каждой</h4>
-              <p class="articals__description">
-                8 Марта – это не просто Международный женский день, это ещё день
-                тюльпанов, приятных сюрпризов и праздничных тёплых пожеланий.
-              </p>
-              <a href="#"
-                ><button class="articals__button">Подробнее</button></a
-              >
+              <div class="articals__desbut">
+                <p class="articals__description">
+                  8 Марта – это не просто Международный женский день, это ещё
+                  день тюльпанов, приятных сюрпризов и праздничных тёплых
+                  пожеланий.
+                </p>
+                <a href="#"
+                  ><button class="articals__button articals__btn">
+                    Подробнее
+                  </button></a
+                >
+              </div>
             </div>
 
             <!-- fruit -->
@@ -258,13 +265,16 @@
               <h4 class="articals__title">
                 ЗОЖ или ФАСТФУД. А вы на чьей стороне? Голосуем!
               </h4>
-              <p class="articals__description">
-                Голосуйте за любимые категории, выбирайте категорию-победителя в
-                мобильном приложении и получайте кешбэк 10% баллами в апреле!
-              </p>
-              <a href="#"
-                ><button class="articals__button">Подробнее</button></a
-              >
+              <div class="articals__desbut">
+                <p class="articals__description">
+                  Голосуйте за любимые категории, выбирайте категорию-победителя
+                  в мобильном приложении и получайте кешбэк 10% баллами в
+                  апреле!
+                </p>
+                <a href="#"
+                  ><button class="articals__button">Подробнее</button></a
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -279,6 +289,7 @@
                 <li class="footer__logo">
                   <img src="./src/images/logo-footer.svg" alt="logo" />
                 </li>
+
                 <li>
                   <a class="footer__a" href="#">О компании</a>
                 </li>
@@ -316,6 +327,7 @@
                     ><img src="./src/images/ok.svg" alt="ok"
                   /></a>
                 </li>
+
                 <div class="fotter__fhone">
                   <a class="footer__b" href="#">
                     <img src="./src/images/phone.svg" alt="telefon" /> 8 800 777
