all ready+adaptive

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       <div class="container header">
         <div class="header__logo">
           <img
-            src="./src/images/logo.svg"
+            src="./src/images/facelogo.svg"
             alt="северяочка логотип"
             class="header__image-logo"
           />
+          <p class="header__logo-text">СЕВЕРЯНОЧКА</p>
         </div>
         <input type="checkbox" name="" class="header__check" id="checkbox" />
         <nav class="supernav">
@@ -91,6 +92,7 @@
             type="text"
             placeholder="Найти товар"
           />
+          <img class="header__loopa" src="./src/images/search.svg" alt="лупа">
         </div>
         <nav class="header__nav">
           <ul class="header__unlist">
@@ -134,8 +136,8 @@
           />
           <p class="header__name-user">Алексей</p>
         </div>
-        <div class="user-menu">
-          <img class="user-button" src="./src/images/Button.svg" alt="" />
+        <div class="header__user-menu">
+          <img class="header__user-button" src="./src/images/Button.svg" alt="" />
         </div>
       </div>
     </header>
